syntax = "proto3";

package domain_manager.v1;

import "shared.proto";

service DomainService {
    rpc Create (CreateDomainRequest) returns (DomainResponse);
    rpc FindAll (ListDomainsRequest) returns (DomainListResponse);
    rpc FindOne (FindOneDomainRequest) returns (DomainResponse);
    rpc Update (UpdateDomainRequest) returns (DomainResponse);
    rpc Remove (FindOneDomainRequest) returns (DomainResponse);
}

message DomainResponse {
    string id = 1;
    string hostname = 2;
    string status = 3;
    string pwa_app_id = 4;
    string owner_id = 5;
    string created_at = 6;
    string updated_at = 7;
}

message CreateDomainRequest {
    string hostname = 1;
    string pwa_app_id = 2;
    string owner_id = 3;
    string status = 4;
}

message UpdateDomainRequest {
    string id = 1;
    optional string hostname = 2;
    optional string status = 3;
}

message DomainFilter {
    optional string search = 1;
    optional string pwa_app_id = 2;
    optional string status = 3;
}

message ListDomainsRequest {
    DomainFilter filters = 1;
    shared.PaginationParams pagination = 2;
}

message DomainListResponse {
    repeated DomainResponse items = 1;
    int32 total = 2;
}

message FindOneDomainRequest {
    string id = 1;
}