syntax = "proto3";

package pixel_token.v1;


service PixelTokenService {
    rpc Create (CreatePixelTokenRequest) returns (PixelToken);
    rpc FindAll (FindAllPixelTokensRequest) returns (FindAllPixelTokensResponse);
    rpc FindOne (FindOnePixelTokenRequest) returns (PixelToken);
    rpc Update (UpdatePixelTokenRequest) returns (PixelToken);
    rpc Remove (RemovePixelTokenRequest) returns (RemovePixelTokenResponse);
}

enum PixelTokenStatus {
    PIXEL_TOKEN_STATUS_ACTIVE = 0;
    PIXEL_TOKEN_STATUS_INACTIVE = 1;
}


message PixelToken {
    string id = 1;
    string token = 2;
    string description = 3;
    string owner_id = 4;
    PixelTokenStatus status = 5;
    string created_at = 6;
    string updated_at = 7;
}

message CreatePixelTokenRequest {
    string token = 1;
    string description = 2;
    string owner_id = 3;
    PixelTokenStatus status = 4;
}

message FindAllPixelTokensRequest {
     string owner_id = 1;
     int32 page = 2;
     int32 limit = 3;
}

message FindAllPixelTokensResponse {
    repeated PixelToken pixel_tokens = 1;
}

message FindOnePixelTokenRequest {
    string id = 1;
}

message UpdatePixelTokenRequest {
    string id = 1;
    string token = 2;
    string description = 3;
    string owner_id = 4;
    PixelTokenStatus status = 5;
}

message RemovePixelTokenRequest {
    string id = 1;
}

message RemovePixelTokenResponse {
    bool success = 1;
    string id = 2;
}